Align with 8.5.x.